# SlackIncidentBot

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW_FIXES.md  CONFIGURATION.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Makefile  PHASE1_COMPLETE.md  PHASE3_PLAN.md  PHASE3_SUMMARY.md  QUICKSTART.md  README.md  SLACK_SETUP.md  TESTING.md  docker-compose.yml
.codex/: codex-os.manifest.json
.codex/bootstrap/: tests-docs.v1.json
.github/workflows/: ci.yml  docker.yml
migrations/: 20260215000001_initial_schema.sql  20260215000002_incident_templates.sql
scripts/: clean-full-local.sh  clean-heavy.sh  lean-dev.sh
src/: app_state.rs  config.rs  error.rs  lib.rs  main.rs
src/adapters/: mod.rs  statuspage.rs
src/commands/: declare.rs  mod.rs  postmortem.rs  resolved.rs  severity.rs  status.rs  timeline.rs
src/db/: mod.rs  models.rs
src/db/queries/: audit.rs  incidents.rs  mod.rs  notifications.rs  statuspage.rs  templates.rs  timeline.rs
src/jobs/: mod.rs  statuspage_sync.rs  worker.rs
src/services/: audit.rs  incident.rs  mod.rs  notification.rs  postmortem.rs  timeline.rs
src/slack/: blocks.rs  client.rs  events.rs  mod.rs  modals.rs  verification.rs
src/utils/: channel.rs
tests/: incident_lifecycle_test.rs
tests/common/: mod.rs
