[package]
name = "incident-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { package = "sqlx-core", version = "0.8", default-features = false, features = ["_rt-tokio", "_tls-none", "chrono", "uuid", "json", "migrate"] }
sqlx-postgres = { version = "0.8", default-features = false, features = ["uuid", "chrono", "json", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
config = "0.14"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tower-http = { version = "0.6", features = ["trace", "cors"] }
